@@ -1,0 +1,14 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Test Page</title>
+</head>
+<body><div id="portal">
+<script type="text/javascript">
+	documen.write("P&#345;&iacute;li&scaron; &#382;lu&#357;ou&#269;k&yacute; k&#367;&#328; &uacute;p&#283;l &#271;&aacute;belks&eacute; &oacute;dy");
+</script><p>
+	P&#345;&iacute;li&scaron; &#382;lu&#357;ou&#269;k&yacute; k&#367;&#328; &uacute;p&#283;l &#271;&aacute;belks&eacute; &oacute;dy;
+	</p>
+</div></body>
+</html>
